<resources>
    <string name="app_name">Rentage_Admin</string>
    <string name="todo">TODO</string>
    <string name="manage_users">Manage User</string>
    <string name="manage_orders">Manage Order</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="manage_categories">Manage Category</string>
    <string name="manage_service">Manage Service</string>
</resources>
