<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".acitvities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/userCard"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/todo"
                        android:padding="30dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_account" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/manage_users"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/serviceCard"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/todo"
                        android:padding="30dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/manage_service" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/manage_service"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/ordercard"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/todo"
                        android:padding="30dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/purchase_order" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/manage_orders"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/categorycard"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/todo"
                        android:padding="30dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/category" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:padding="5dp"
                        android:text="@string/manage_categories"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</ScrollView>